--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
+  "homepage": "https://ashmuhamad.github.io/portfolio",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build"
   },
   "dependencies": {
     "framer-motion": "^6.2.8",
@@ -18,6 +21,7 @@
   },
   "devDependencies": {
     "eslint": "8.9.0",
-    "eslint-config-next": "12.1.0"
+    "eslint-config-next": "12.1.0",
+    "gh-pages": "^3.2.3"
   }
 }
