--- a/.github/workflows/deploy-portfolio.yml
+++ b/.github/workflows/deploy-portfolio.yml
@@ -27,10 +27,10 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build 
-    - run: npm export
+    - run: npm out
     
     - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4.2.5
         with:
-          branch: gh-pages 
+          branch: main
           folder: out
