--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
+  "author": "Ash Muhamad",
   "homepage": "https://ashmuhamad.github.io/portfolio",
   "private": true,
   "scripts": {
@@ -20,7 +21,6 @@
   },
   "devDependencies": {
     "eslint": "8.9.0",
-    "eslint-config-next": "12.1.0",
-    "gh-pages": "^3.2.3"
+    "eslint-config-next": "12.1.0"
   }
 }
